--- a/package/package.json
+++ b/package/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.2",
     "rollup": "^2.75.5",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^4.2.2",
     "tslib": "^2.4.0",
