feat: add bin to package.json and improve rollup process

--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -6,8 +6,12 @@
     "emitDeclarationOnly": true,
     "target": "esnext",
     "lib": ["dom", "esnext"],
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "strictNullChecks": false,
   },
+  "esModuleInterop": true,
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
