--- a/package/package.json
+++ b/package/package.json
@@ -7,17 +7,30 @@
     "dev": "rollup -c --watch"
   },
   "files": [
-    "dist/*"
+    "dist/*",
+    "bin/*"
   ],
-  "main": "dist/curssed.js",
+  "main": "dist/curssed.server.js",
   "types": "dist/curssed.d.ts",
+  "bin": {
+    "curssed": "bin/curssed.js"
+  },
   "dependencies": {
-    "jsdom": "^19.0.0"
+    "arg": "^5.0.2",
+    "jsdom": "^19.0.0",
+    "pretty": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.40",
+    "chalk": "^4.1.2",
+    "readline": "^1.3.0",
     "rollup": "^2.75.5",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
