feat: refactor so that ast handler and style handler do not differ from server and runtime

--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "strictNullChecks": false,
+    "strictNullChecks": false
   },
   "esModuleInterop": true,
   "include": ["**/*.ts"],
