--- a/package/package.json
+++ b/package/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "arg": "^5.0.2",
+    "fs-extra": "^10.1.0",
     "jsdom": "^19.0.0",
     "pretty": "^2.0.0"
   },
@@ -27,6 +28,7 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.40",
     "chalk": "^4.1.2",
