--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write .",
-    "dev": "pnpm run dev --filter=./ --parallel"
+    "build": "pnpm --filter='./packages/**/*' --parallel run build"
   },
   "devDependencies": {
     "prettier": "^2.6.2",
-    "prettier-plugin-organize-imports": "^2.3.4"
+    "prettier-plugin-organize-imports": "^2.3.4",
+    "typescript": "^4.7.3"
   }
 }
