feat: adding serve curssed command

--- a/samples/cli/package.json
+++ b/samples/cli/package.json
@@ -4,6 +4,7 @@
     "@curssed/cli": "workspace:^"
   },
   "scripts": {
-    "build": "curssed build --css style.css"
+    "build": "curssed build --css style.css",
+    "serve": "curssed serve --css style.css"
   }
 }
