feat: change to pure esm cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -10,7 +10,7 @@
     "bin/*"
   ],
   "bin": {
-    "curssed": "bin/curssed.cli.js"
+    "curssed": "bin/curssed.cli.mjs"
   },
   "dependencies": {
     "@curssed/compiler": "workspace:^",
